--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+/* Default Styles */
 * {
     margin: 0;
     font-family: 'Work Sans', sans-serif;
@@ -11,6 +12,10 @@
     font-weight: 700;
     border: 0;
 }
+.check-icon img{
+    width: 24px;
+    padding: 10px 5px 0 5px;
+}
 
 /* header section */
 .header {
@@ -23,7 +28,7 @@
     margin-bottom: 130px;
 }
 .blank-div {
-    width: 1785px;
+    width: 150%;
     height: auto;
 }
 
@@ -40,4 +45,34 @@
 .heading p{
     text-align: right;
     margin-bottom: 25px;
+}
+
+/* failure section */
+.failure-content{
+    display: flex;
+    justify-content: space-between;
+
+}
+.img-part {
+    margin-left: 35px;
+    padding: 0 65px;
+}
+.text-part{
+    margin-right: 220px;
+}
+.text-part h3{
+    font-size: 40px;
+    font-weight: 700;
+    margin-bottom: 25px;
+
+}
+.text-part p{
+    color: #444343;
+    margin-bottom: 15px;
+}
+.text-part li{
+    color: #444343;
+    list-style: none;
+    text-align: left;
+    margin-bottom: 10px;
 }
